--- a/notebooks/Intro_to_python_pandas-DAY1.ipynb
+++ b/notebooks/Intro_to_python_pandas-DAY1.ipynb
@@ -162,7 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Next line will print out text\n"
+    "# Next line will print out text\n",
+    "print(text)"
    ]
   },
   {
@@ -222,48 +223,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** In python 2 if we divide one integer by another, we get an integer! **\n",
-    "The result in python 3 is different where we get a float.\n",
-    "\n",
-    "If you use Python 2 (not recommended as it will be deprecated) remember to convert your integers to floats when you want floating point precision for divisions!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# testing integer division\n",
-    "10/3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert to integer\n",
-    "a = 6.6\n",
-    "int(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert to float\n",
-    "b = 5\n",
-    "float(b)"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -336,13 +295,6 @@
     "numbers.append()\n",
     "print(numbers)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -446,18 +398,42 @@
    "source": [
     "# Working With Pandas DataFrames in Python\n",
     "\n",
-    "## Starting in the same spot\n",
     "\n",
-    "To help the lesson run smoothly, let's ensure everyone is in the same directory.\n",
-    "This should help us avoid path and file name issues. At this time please\n",
-    "navigate to the workshop directory. If you working in IPython Notebook be sure\n",
-    "that you start your notebook in the workshop directory.\n",
+    "## About Libraries\n",
     "\n",
-    "A quick aside that there are Python libraries like [OS\n",
-    "Library](https://docs.python.org/3/library/os.html) that can work with our\n",
-    "directory structure, however, that is not our focus today.\n",
+    "![](package.png)\n",
     "\n",
-    "If you need to change your directory ```import os``` and use ```os.chdir```\n",
+    "A library in Python contains a set of tools (called functions) that perform\n",
+    "tasks on our data. Importing a library is like getting a piece of lab equipment\n",
+    "out of a storage locker and setting it up on the bench for use in a project.\n",
+    "Once a library is set up, it can be used or called to perform many tasks.\n",
+    "\n",
+    "Python doesn't load all of the libraries available to it by default. We have to\n",
+    "add an `import` statement to our code in order to use library functions. To import\n",
+    "a library, we use the syntax `import libraryName`. If we want to give the\n",
+    "library a nickname to shorten the command, we can add `as nickNameHere`.  An\n",
+    "example of importing the pandas library using the common nickname `pd` is below.\n",
+    "\n",
+    "You only need to load a library once during your session. You can load the library when needed\n",
+    "or you can load all necessary libraries at the beginning of your script. \n",
+    "This is good practice, especially for the readability of your code\n",
+    "\n",
+    "## Pandas in Python\n",
+    "\n",
+    "One of the best options for working with tabular data in Python is to use the\n",
+    "[Python Data Analysis Library](http://pandas.pydata.org/) (a.k.a. Pandas). The\n",
+    "Pandas library provides data structures, produces high quality plots with\n",
+    "[matplotlib](http://matplotlib.org/) and integrates nicely with other libraries\n",
+    "that use [NumPy](http://www.numpy.org/) (which is another Python library) arrays.\n",
+    "\n",
+    "A handy **Pandas cheathsheet** can be found [here](http://pandas.pydata.org/Pandas_Cheat_Sheet.pdf).\n",
+    "\n",
+    "Each time we call a function that's in a library, we use the syntax\n",
+    "`LibraryName.FunctionName`. Adding the library name with a `.` before the\n",
+    "function name tells Python where to find the function. In the example above, we\n",
+    "have imported Pandas as `pd`. This means we don't have to type out `pandas` each\n",
+    "time we call a Pandas function.\n",
+    "\n",
     "\n",
     "## Our Data \n",
     "\n",
@@ -493,38 +469,18 @@
     "3,7,16,1977,2,DM,F,\n",
     "```\n",
     "\n",
-    "## About Libraries\n",
+    "## Starting in the same spot\n",
     "\n",
-    "A library in Python contains a set of tools (called functions) that perform\n",
-    "tasks on our data. Importing a library is like getting a piece of lab equipment\n",
-    "out of a storage locker and setting it up on the bench for use in a project.\n",
-    "Once a library is set up, it can be used or called to perform many tasks.\n",
+    "To help the lesson run smoothly, let's ensure everyone is in the same directory.\n",
+    "This should help us avoid path and file name issues. At this time please\n",
+    "navigate to the workshop directory. If you working in IPython Notebook be sure\n",
+    "that you start your notebook in the workshop directory.\n",
     "\n",
-    "Python doesn't load all of the libraries available to it by default. We have to\n",
-    "add an `import` statement to our code in order to use library functions. To import\n",
-    "a library, we use the syntax `import libraryName`. If we want to give the\n",
-    "library a nickname to shorten the command, we can add `as nickNameHere`.  An\n",
-    "example of importing the pandas library using the common nickname `pd` is below.\n",
+    "A quick aside that there are Python libraries like [OS\n",
+    "Library](https://docs.python.org/3/library/os.html) that can work with our\n",
+    "directory structure, however, that is not our focus today.\n",
     "\n",
-    "You only need to load a library once during your session. You can load the library when needed\n",
-    "or you can load all necessary libraries at the beginning of your script. \n",
-    "This is good practice, especially for the readability of your code\n",
-    "\n",
-    "## Pandas in Python\n",
-    "\n",
-    "One of the best options for working with tabular data in Python is to use the\n",
-    "[Python Data Analysis Library](http://pandas.pydata.org/) (a.k.a. Pandas). The\n",
-    "Pandas library provides data structures, produces high quality plots with\n",
-    "[matplotlib](http://matplotlib.org/) and integrates nicely with other libraries\n",
-    "that use [NumPy](http://www.numpy.org/) (which is another Python library) arrays.\n",
-    "\n",
-    "A handy **Pandas cheathsheet** can be found [here](http://pandas.pydata.org/Pandas_Cheat_Sheet.pdf).\n",
-    "\n",
-    "Each time we call a function that's in a library, we use the syntax\n",
-    "`LibraryName.FunctionName`. Adding the library name with a `.` before the\n",
-    "function name tells Python where to find the function. In the example above, we\n",
-    "have imported Pandas as `pd`. This means we don't have to type out `pandas` each\n",
-    "time we call a Pandas function."
+    "If you need to change your directory ```import os``` and use ```os.chdir```"
    ]
   },
   {
@@ -659,7 +615,9 @@
     "\n",
     "Now we can start manipulating our data. First, let's check the data type of the\n",
     "data stored in `surveys_df` using the `type` method. The `type` method and\n",
-    "`__class__` attribute tell us that `surveys_df` is `<class 'pandas.core.frame.DataFrame'>`."
+    "`__class__` attribute tell us that `surveys_df` is \n",
+    "\n",
+    "`<class 'pandas.core.frame.DataFrame'>`."
    ]
   },
   {
