update intro text, small edits

--- a/notebooks/Intro_to_python_pandas-DAY1.ipynb
+++ b/notebooks/Intro_to_python_pandas-DAY1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CIC Virtual Carpentries Workshop\n",
+    "# CIC Virtual Carpentries Workshop - Day 1\n",
     "\n",
     "This lesson is adapted from the [Data Carpentry Ecology lesson](http://www.datacarpentry.org/python-ecology-lesson/)\n",
     "\n",
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculations\n"
+    "# Calculations"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Printing text to screen\n"
+    "# Printing text to screen"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# running scripts (using jupyter notebook magics)\n"
+    "# running scripts (using jupyter notebook magics)"
    ]
   },
   {
@@ -122,8 +122,8 @@
    "source": [
     "# #Examples of numeric and text data\n",
     "text = \n",
-    "number = \n",
-    "pi_value = "
+    "number =  \n",
+    "pi_value ="
    ]
   },
   {
@@ -145,7 +145,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -723,7 +725,8 @@
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "raw_mimetype": "text/x-python"
    },
    "outputs": [],
    "source": []
@@ -834,7 +837,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -1255,7 +1262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate average weight of individuals in each plot\n"
+    "# calculate average weight of individuals in each plot"
    ]
   },
   {
@@ -1279,7 +1286,7 @@
    },
    "outputs": [],
    "source": [
-    "# count the number of each sex per species\n"
+    "# count the number of each sex per species"
    ]
   },
   {
@@ -1451,7 +1458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
