--- a/notebooks/Intro_to_python_pandas-DAY2.ipynb
+++ b/notebooks/Intro_to_python_pandas-DAY2.ipynb
@@ -564,7 +564,7 @@
     "don't exist - for example,  NaN, or \"Not a Number\" values. To understand masks,\n",
     "we also need to understand `BOOLEAN` objects in python.\n",
     "\n",
-    "Boolean values include `true` or `false`. So for example\n",
+    "Boolean values include `True` or `False`. So for example\n",
     "\n",
     "```python\n",
     "# set x to 5\n",
