Added some early remakrs on functions/control flow

--- a/notebooks/Intro_to_python_pandas-DAY1.ipynb
+++ b/notebooks/Intro_to_python_pandas-DAY1.ipynb
@@ -374,6 +374,105 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Control flow\n",
+    "Its often important to tell our software to only do something if certain conditions are met"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "integer = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(integer < 4):\n",
+    "    pass\n",
+    "if(integer > 4): \n",
+    "    pass\n",
+    "if(integer == 4):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Looping\n",
+    "\n",
+    "Doing things one at a time can be quite tedious. Programming languages allow us to **iterate** what we do programatically:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    print('The current number is,', i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions and packages\n",
+    "> \"If you wish to make an apple pie from scratch, you must first invent the universe”  - Carl Sagan  \n",
+    "\n",
+    "When creating something, it's often an inordinate task to do it all from scratch.  \n",
+    "Other people have likely already made us tools and processes to do what we want in a much faster and easier way.  \n",
+    "When building a house, we dont start by growing trees, making bricks from clay, and forging out hammers from iron ore!\n",
+    "\n",
+    "\n",
+    "In python, if we wanted to make an apple pie from scratch, we can simply \n",
+    "> ```\n",
+    "import apple_pie\n",
+    "apple_pie.create_from_scratch()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a function to add two weighted numbers, and take the average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1458,7 +1557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
