Updated challenge questions for D1

--- a/notebooks/Intro_to_python_pandas-DAY1.ipynb
+++ b/notebooks/Intro_to_python_pandas-DAY1.ipynb
@@ -1479,10 +1479,25 @@
    "metadata": {},
    "source": [
     "### Challenge Activities\n",
+    "These challenge activities involve plotting data. It's often best to create an object to plot first, then call the .plot() method on it (see the skeleton code below with 'avrg_wgt')\n",
+    "1. Create a scatter plot of average weight across all species per plot.  \n",
+    " - The final plots x-axis should be 'plot', and the y axis should be 'wgt'.  \n",
+    " - If you use `avrg_wgt.plot()`, you will by default get a **line** plot. To turn this into a scatter plot, add the    <u>optional</u> **keyword argument** (aka \"**kwarg**\") `style='o'` to plot arguments:\n",
+    "```\n",
+    "avrg_wgt.plot(style='o')\n",
+    "```\n",
+    " - If you're missing a label, try adding the **kwarg** xlabel or ylabel to the argument of plot, separated by commas:\n",
+    " ```\n",
+    " avrg_wgt.plot(xlabel='your_x_label', ylabel='your_y_label')\n",
+    " ```\n",
+    "2. Create the same plot, but with average weight for each sex per plot. Hint, you will need to `unstack` when plotting. x-axis = plot, y-axis = wgt, different lines for each sex. This is done for you in the skeleton code provided.\n",
     "\n",
-    "1. Create a scatter plot of average weight across all species per plot. x-axis = plot, y-axis = wgt\n",
-    "2. Create the same plot, but with average weight for each sex per plot. Hint, you will need to `unstack` when plotting. x-axis = plot, y-axis = wgt, different lines for each sex.\n",
-    "3. Create a trend plot of the average weight per plot over time. x-axis = year, y-axis = wgt, different lines for each plot."
+    "\n",
+    "\n",
+    "3. Create a trend plot of the average weight per plot over time. x-axis = year, y-axis = wgt, different lines for each plot.\n",
+    "\n",
+    "\n",
+    " - Extra challenge question: Why do you need to unstack for q2 and a3?"
    ]
   },
   {
