Added material on type checking

--- a/notebooks/Intro_to_Python_Day1_Pt1.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt1.ipynb
@@ -88,11 +88,11 @@
     "\n",
     "One of the most basic things we can do in Python is to assign values to variables. Everything in a Python object has a type and affects what we can do with it and the outputs of calculations as well. There are three main types of data we'll explore in this lesson: strings, integers and floats.\n",
     "\n",
-    "Strings are values that contain numbers and/or characters. For example, a string might be a word, a sencence, or several sentences. A string can contain or consist of numbers. For instance, '1234' could be stored as a string. As could '10.23'. However **strings that contain numbers cannot be used for mathematical operations?**\n",
+    "Strings are values that contain numbers and/or characters. For example, a string might be a word, a sentence, or several sentences. A string can contain or consist of numbers. For instance, '1234' could be stored as a string. As could '10.23'. However **strings that contain numbers cannot be used for mathematical operations!**\n",
     "\n",
-    "Integers are numbers without a decimal point. Thus 1.13 would be stored as 1. 1234.345 is stored as 1234. You will see that data type `Int64` in Python which stands for 64 bit integer. The 64 simply refers to the memory allocated to store data in each cell which effectively relates to how many digits it can store in each \"cell\".\n",
+    "Integers are numbers without a decimal point. Thus 1.13 would be stored as 1. 1234.345 is stored as 1234.\n",
     "\n",
-    "Floats or floating point numbers in contrast, have decimal points. For example, 0.00, 1.13, 2.0. \n"
+    "Floats or floating point numbers in contrast, have decimal points. For example, 0.00, 1.13 and 2.0. \n"
    ]
   },
   {
@@ -114,6 +114,34 @@
    "source": [
     "Here we've assigned data to the variables `text`, `number` and `pi_value`, using the assignment operator `=`.\n",
     "\n",
+    "To check the type of something, we can use the built-in function `type`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To print out the value stored in a variable, we can simply type in the name of the variable into the interpreter:"
    ]
   },
@@ -278,7 +306,7 @@
    "source": [
     "#### Sequences: Lists and Tuples\n",
     "##### Lists\n",
-    "*Lists* are a common data structure to hold an ordered sequence of elements. Each eleemtn can be accessed by an index. Note that Python indexes start with 0 instead of 1:\n",
+    "*Lists* are a common data structure to hold an ordered sequence of elements. Each element can be accessed by an index. Note that Python indexes start with 0 instead of 1:\n",
     "\n"
    ]
   },
@@ -350,6 +378,13 @@
     "1. What happens when you execute `a_tuple[1] = 5` vs. `a_list[1] = 5`?\n",
     "2. What does `type(a_tuple)` tell you about `a_tuple`?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -483,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Indentation** is very important in Python. Note that the second line is idented. This is Python's method of marking a block of code."
+    "**Indentation** is very important in Python. Note that the second line is indented. This is Python's method of marking a block of code."
    ]
   },
   {
