Fixed errors and cleared output

--- a/notebooks/Intro_to_Python_Day1_Pt2.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt2.ipynb
@@ -36,7 +36,7 @@
     "#### Starting in the same spot\n",
     "To help the lesson run smoothly, let's ensure that everyone is in the same directory. This should help us avoid path and filename issues. At this time, please navigate to the workshop directory. If you are working in Jupyter Notebook, be sure that you start your notebook in the workshop directory.\n",
     "\n",
-    "A quick aside that there are Python libraries like [OS\n",
+    "A quick aside is that there are Python libraries like [OS\n",
     "Library](https://docs.python.org/3/library/os.html) and [pathlib](https://docs.python.org/3/library/pathlib.html) that can work with our\n",
     "directory structure, however, that is not our focus today."
    ]
@@ -134,7 +134,7 @@
     "have imported Pandas as `pd`. This means we don't have to type out `pandas` each\n",
     "time we call a Pandas function.\n",
     "\n",
-    "A handy **Pandas cheathsheet** can be found [here](http://pandas.pydata.org/Pandas_Cheat_Sheet.pdf).\n",
+    "A handy **Pandas cheatsheet** can be found [here](http://pandas.pydata.org/Pandas_Cheat_Sheet.pdf).\n",
     "\n",
     "---"
    ]
@@ -144,7 +144,7 @@
    "metadata": {},
    "source": [
     "### Reading CSV Data using Pandas\n",
-    "We will begin by locating and reading our survey data which are in CSV format. We can use Pandas' `read_csv` function to pull the file directly into a [DataFrame](https://pandas.pydata.org/pandas-docs/stable/getting_started/dsintro.html#dataframe).\n",
+    "We will begin by locating and reading our survey data which is in CSV format. We can use Pandas' `read_csv` function to pull the file directly into a [DataFrame](https://pandas.pydata.org/pandas-docs/stable/getting_started/dsintro.html#dataframe).\n",
     "\n",
     "#### So What's a DataFrame?\n",
     "A DataFrame is a 2-dimensional data structure that can store data of different types (including characters, integers, floating point values, factors and more) in columns. It is similar to a spreadsheet or an SQL table or the `data.frame` in R. A DataFrame always has an index (0-based). An index refers to the position of an element in the data structure."
@@ -413,6 +413,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Summary statistics for the entire dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Summary statistics for the weight column\n"
    ]
   },
@@ -587,28 +596,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Group by plot_id and calculate mean weight\n",
+    "avrg_wgt = surveys_df.groupby('plot_id').mean()['weight']\n",
+    "\n",
+    "# Let's plot, you should see x-axis -> plot_id, y-axis -> weight\n",
+    "..."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Group by plot_id and sex, then calculate mean weight\n",
+    "avrg_wgt = surveys_df.groupby(['plot_id', 'sex']).mean()['weight']\n",
+    "\n",
+    "# Let's plot, you should see x-axis -> plot_id, y-axis -> weight, different lines for sex\n",
+    "# You need to use the .unstack() method before the .plot() for this to work\n",
+    "..."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Group by year and plot_id, then calculate mean weight\n",
+    "# wgt_by_time = surveys_df.groupby(['year', 'plot_id']).mean()['weight']\n",
+    "\n",
+    "# Let's plot, you should see x-axis -> year, y-axis -> weight, different lines for plot\n",
+    "# You need to use the .unstack() method before the .plot() for this to work\n",
+    "..."
+   ]
   }
  ],
  "metadata": {
@@ -627,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
