--- a/notebooks/Intro_to_Python_Day1_Pt3.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt3.ipynb
@@ -122,8 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What happens if we flip the order?\n",
-    "surveys_df[['plot_id', 'species_id']].head()"
+    "# What happens if we flip the order?\n"
    ]
   },
   {
@@ -231,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The stop bound in Pythin is different from what you might be used to in languages like Matlab and R."
+    "The stop bound in Python is different from what you might be used to in languages like Matlab and R."
    ]
   },
   {
@@ -332,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We we assigned the first 3 rows the value of `0` using the `ref_surveys_df` DataFrame, the `surveys_df` DataFrame is modifited too. Remember, we created the reference `ref_surveys_df` object above when we did `ref_surveys_df = surveys_df`. \n",
+    "When we assigned the first 3 rows the value of `0` using the `ref_surveys_df` DataFrame, the `surveys_df` DataFrame is modified too. Remember, we created the reference `ref_surveys_df` object above when we did `ref_surveys_df = surveys_df`. \n",
     "\n",
     "Remember `surveys_df` and `ref_surveys_df` refer to the same exact DataFrame object. If either one changes the object, the other will see the same changes to the reference object."
    ]
@@ -373,7 +372,7 @@
    "source": [
     "### Slicing Subsets of Rows and Columns in Python\n",
     "\n",
-    "We can select specifc ranges of our data in both the row and column directions using either label or integer-based indexing.\n",
+    "We can select specific ranges of our data in both the row and column directions using either label or integer-based indexing.\n",
     "- `loc`: indexing via *labels* (which can be integers)\n",
     "- `iloc`: indexing via *integers*\n",
     "\n",
@@ -384,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To select a subset of rows **and** columns from our DataFrame, we can use the `iloc` method. For example, we can select month, day and year (columns 2, 3 and 4 if we start counting at 1), like this:"
+    "To select a subset of rows **and** columns from our DataFrame, we can use the `iloc` method. For example, we can select month, day and year (columns 1, 2 and 3 if we start counting at 0), like this:"
    ]
   },
   {
@@ -700,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the `weight` column of our DataFrame contains many `null` or `NaN` values. We will explore ways of dealing with this in the next episode on (Data Types and Formats)[https://datacarpentry.org/python-ecology-lesson/04-data-types-and-format/index.html].\n",
+    "Note that the `weight` column of our DataFrame contains many `null` or `NaN` values. We will explore ways of dealing with this in the next episode on [Data Types and Formats](https://datacarpentry.org/python-ecology-lesson/04-data-types-and-format/index.html).\n",
     "\n",
     "We can run `isnull` on a particular column too. What does the code below do?"
    ]
@@ -711,7 +710,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What does this do?\n"
+    "empty_weights = surveys_df[pd.isnull(surveys_df['weight'])]['weight']\n",
+    "print(empty_weights)"
    ]
   },
   {
@@ -804,7 +804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
